--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,17 @@ version = "0.0.1"
 edition = "2021"
 authors = ["Jonathan Hauter"]
 
-[dependencies]
-actix-web = "4"
+[lib]
+path = "lib/lib.rs"
 
+[[bin]]
+path = "src/main.rs"
+name = "SmartCity_Auth"
+
+[dependencies]
+serde = {version = "1.0.136", features = ["derive"]}
+serde_json = "1.0"
+secrecy = "0.8.0"
+actix-web = "4"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+reqwest = { version = "0.11", features = ["json"]}
