--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ secrecy = "0.8.0"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 reqwest = { version = "0.11", features = ["json"]}
+config = {version = "0.13", features = ["json", "toml"]}
