--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,13 +1,25 @@
 [package]
 version = "0.1.0"
 name = "backend"
-repository = "https://github.com/MoonZoon/demo"
-authors = ["Martin Kavík <martin@kavik.cz>"]
-description = "MoonZoon demo"
-categories = ["MoonZoon", "example"]
-license = "MIT"
-readme = "../README.md"
 edition = "2021"
+[lib]
+path = "lib/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "SmartCity_Auth"
 
 [dependencies]
 moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "15cb619faca5f78a47e08f4af4bfa595f0eb64b1" }
+serde = {version = "1.0.136", features = ["derive"]}
+serde_json = "1.0"
+secrecy = "0.8.0"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+reqwest = { version = "0.11", features = ["json"]}
+actix-web = "4.0.0-beta.10"
+config = "0.13.1"
+derive_more = "0.99.0"
+diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
+lapin = "2.1.1"
+executor-trait = "2.1.0"
+tokio-executor-trait = "2.1.0"
