--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -2,12 +2,13 @@
 version = "0.1.0"
 name = "backend"
 edition = "2021"
+
 [lib]
 path = "lib/lib.rs"
 
 [[bin]]
 path = "src/main.rs"
-name = "SmartCity_Auth"
+name = "backend"
 
 [dependencies]
 moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "15cb619faca5f78a47e08f4af4bfa595f0eb64b1" }
