--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -20,7 +20,7 @@ reqwest = { version = "0.11", features = ["json"]}
 actix-web = "4.0.0-beta.10"
 config = "0.13.1"
 derive_more = "0.99.0"
-diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
+diesel = { version = "1.4.8", features = ["mysql", "r2d2", "chrono"] }
 lapin = "2.1.1"
 executor-trait = "2.1.0"
 tokio-executor-trait = "2.1.0"
