--- a/.github/workflows/buildandpush.yml
+++ b/.github/workflows/buildandpush.yml
@@ -31,3 +31,7 @@ jobs:
         with:
           push: true
           tags: merlinchiodo/smartcity:SmartAuth,merlinchiodo/smartcity:SmartAuth_1.0.0-${{ github.sha }}
+          build-args: |
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
+            AMQP_ADDR=${{ secrets.AMQP_ADDR }}
+          
